fix(preference, table): ajout contraste sur table v2 et notice

--- a/src/component/badge/style/module/_default.scss
+++ b/src/component/badge/style/module/_default.scss
@@ -15,6 +15,7 @@
   @include max-width(100%);
   text-transform: uppercase;
   border-radius: spacing.space(1v);
+  @include icon-forced-color(canvastext);
   @include preference.forced-colors {
     outline: 1px solid;
   }
