--- a/src/component/tag/style/module/_default.scss
+++ b/src/component/tag/style/module/_default.scss
@@ -9,6 +9,7 @@
 @include build-tag();
 
 #{ns(tag)} {
+  @include icon-forced-color(canvastext);
   @include preference.forced-colors {
     border: 1px solid;
 
